// @author EliasDH Team
// @see https://eliasdh.com
// @since 01/01/2025

package SoftwareDesign.Portfolio.Lab02.Code.Interfaces;

public interface VolumeDevice {
    void volumeUp();
    void volumeDown();
}